--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,19 @@
 	<meta charset="UTF-8">
 	<title>Countries and capitals</title>
 </head>
-<body>
+<body ng-app="countriesCapitalsApp">
+
+
+	<h1>Countries and capitals</h1>
+
+
+	<main ng-view></main>
+
+
+<script src="./bower_components/angular/angular.js"></script>
+<script src="./bower_components/angular-route/angular-route.js"></script>
+<script src="countriesCapitalsApp.js"></script>
+
 	
 </body>
 </html>
