add countries view
- initial css
- new view for countries (dummy content)

--- a/app/index.html
+++ b/app/index.html
@@ -3,6 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Countries and capitals</title>
+
+	<link href="//fonts.googleapis.com/css?family=Merriweather:400,700" rel="stylesheet">
+	<link rel="stylesheet" href="countriesCapitals.css">
 </head>
 <body ng-app="countriesCapitalsApp">
 
