--- a/app/index.html
+++ b/app/index.html
@@ -18,7 +18,9 @@
 
 <script src="./bower_components/angular/angular.js"></script>
 <script src="./bower_components/angular-route/angular-route.js"></script>
+<script src="geonamesLibrary.js"></script>
 <script src="countriesCapitalsApp.js"></script>
+<script src="views/countries/CountriesCtrl.js"></script>
 
 	
 </body>
