get countries from geonames API
- move countries routing to controller file
- add viewmodel object
- fix property names in view template

--- a/app/index.html
+++ b/app/index.html
@@ -20,6 +20,7 @@
 <script src="./bower_components/angular-route/angular-route.js"></script>
 <script src="geonamesLibrary.js"></script>
 <script src="countriesCapitalsApp.js"></script>
+<script src="views/countriesCapitalsViews.js"></script>
 <script src="views/countries/CountriesCtrl.js"></script>
 
 	
