show initial country information
- add country controller
- update template with viewmodel property names

--- a/app/index.html
+++ b/app/index.html
@@ -21,6 +21,7 @@
 <script src="geonamesLibrary.js"></script>
 <script src="views/countriesCapitalsViews.js"></script>
 <script src="views/countries/CountriesCtrl.js"></script>
+<script src="views/country/CountryCtrl.js"></script>
 <script src="countriesCapitalsApp.js"></script>
 
 	
