--- a/app/index.html
+++ b/app/index.html
@@ -19,6 +19,7 @@
 <script src="./bower_components/angular/angular.js"></script>
 <script src="./bower_components/angular-route/angular-route.js"></script>
 <script src="geonamesLibrary.js"></script>
+<script src="countriesCapitalsModel.js"></script>
 <script src="views/countriesCapitalsViews.js"></script>
 <script src="views/countries/CountriesCtrl.js"></script>
 <script src="views/country/CountryCtrl.js"></script>
