--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,7 @@
 
 	<link href="//fonts.googleapis.com/css?family=Merriweather:400,700" rel="stylesheet">
 	<link rel="stylesheet" href="countriesCapitals.css">
+	<link rel="stylesheet" href="bower_components/leaflet/dist/leaflet.css">
 </head>
 <body ng-app="countriesCapitalsApp">
 
@@ -20,13 +21,15 @@
 	<main ng-view></main>
 
 
-<script src="./bower_components/angular/angular.js"></script>
-<script src="./bower_components/angular-route/angular-route.js"></script>
-<script src="./bower_components/angular-animate/angular-animate.js"></script>
+<script src="bower_components/angular/angular.js"></script>
+<script src="bower_components/angular-route/angular-route.js"></script>
+<script src="bower_components/angular-animate/angular-animate.js"></script>
 <script src="geonamesLibrary.js"></script>
 <script src="countriesCapitalsModel.js"></script>
 <script src="views/countriesCapitalsViews.js"></script>
 <script src="views/countries/CountriesCtrl.js"></script>
+<script src="bower_components/leaflet/dist/leaflet.js"></script>
+<script src="bower_components/angular-leaflet/dist/angular-leaflet-directive.js"></script>
 <script src="views/country/CountryCtrl.js"></script>
 <script src="countriesCapitalsApp.js"></script>
 
