improve map for displaying capital info
- increase maxbounds if capital is outside (Equitorial Guinea)
- display population on map

--- a/app/index.html
+++ b/app/index.html
@@ -18,7 +18,7 @@
 		<!-- <progress max="100" value="{{ loadingPercent }}">Loading… {{ loadingPercent | number }}%</progress> -->
 		<progress>Loading…</progress>
 	</aside>
-	<main ng-view></main>
+	<main ng-view autoscroll></main>
 
 
 <script src="bower_components/angular/angular.js"></script>
